log/build_2024-07-16_15-22-32/service_client_py/stderr.log
  File "/home/zzq/Desktop/ros2_ws/install/service_client_py/lib/python3.10/site-packages/service_client_py/client.py", line 11
    self.get_logger().info('service not available, waiting again...')1
                                                                     ^
SyntaxError: invalid syntax

